<resources>
    <string name="app_name" translatable="false">RedJack</string>
    <string name="obtener">Obtener</string>
    <string name="opciones">Opciones</string>
    <string name="info">Información</string>
    <string name="todosJuegos">Todos los juegos</string>
    <string name="buscarJuegos">Buscar juegos</string>
    <string name="buscar">Buscar</string>
    <string name="salir">Salir</string>
    <string name="salirSeguro">¿Seguro que deseas salir de la aplicación?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="cancelar">Cancelar</string>
    <string name="entrar">Entrar</string>
    <string name="contraseña">Contraseña</string>
    <string name="nombreusuario">Nombre de usuario</string>
    <string name="loginincorrecto">Usuario y/o contraseña incorrectos.</string>
    <string name="apostar">Apostar</string>
    <string name="carta">Carta</string>
    <string name="plantarse">Plantarse</string>
    <string name="hasperdido">Has perdido</string>
    <string name="hasganado">Has ganado</string>
    <string name="aceptar">Aceptar</string>
    <string name="introduceapuesta">Introduce tu apuesta</string>
    <string name="tusaldo">Tu saldo</string>
    <string name="tuapuesta">Tu apuesta</string>
    <string name="saldoinsuficiente">Saldo insuficiente</string>
    <string name="apuestainvalida">Apuesta inválida</string>
    <string name="selecPuntuacion">Selecciona una puntuación antes de plantarte.</string>
    <string name="tupuntuacion">Tu puntuación</string>
    <string name="seguroSalir">¿Seguro que quieres salir?</string>
    <string name="perderasApuesta">Perderás todo lo apostado en esta mano.</string>
    <string name="replay">Volver a jugar</string>
    <string name="monedasMinus">monedas</string>
    <string name="victoriaMsg">Has ganado %1d monedas. Tu saldo actual es %2d.</string>
    <string name="derrotaMsg">Has perdido %1d monedas. Tu saldo actual es %2d.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="o">o</string>
    <string name="dealer" translatable="false">Dealer</string>
    <string name="preferencias">Preferencias</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="cambiar">Cambiar</string>
    <string name="tema">Tema</string>
    <string name="idioma">Idioma</string>
    <string name="atras">Atrás</string>
    <string name="eligeIdioma">Elige un idioma</string>
    <string name="eligeTema">Elige un tema</string>
    <string name="salirPrefs">Salir de la pantalla de preferencias</string>
    <string name="ingles">Inglés</string>
    <string name="español">Español</string>
    <string name="sistema">Sistema</string>
    <string name="rojoClaro">Rojo claro</string>
    <string name="rojoOscuro">Rojo oscuro</string>
    <string name="claro">Claro</string>
    <string name="oscuro">Oscuro</string>
    <string name="empate">Empate</string>
    <string name="hasempatado">Tu apuesta ha sido reembolsada.</string>
    <string name="notisLogin">Notificaciones de login</string>
    <string name="expNotisLogin">Elige si habilitar las notificaciones recibidas al iniciar sesión</string>
    <string name="compartir">Compartir</string>
    <string name="recomendacion">¡Jugué a RedJack y lo pasé bomba!</string>
    <string name="prefsDeshabilitadas">Preferencias (termina la ronda)</string>
    <string name="apuesta">Apuesta</string>
    <string name="historialPartidas">Historial de partidas</string>
    <string name="historial">Historial</string>
    <string name="noHistorial">No hay historial disponible.</string>
    <string name="bienvenido">Bienvenido de nuevo</string>
    <string name="loginExitoso">Has iniciado sesión con éxito.</string>
    <string name="casinosCerca">Casinos cerca</string>
    <string name="casino" translatable="false">Casino</string>
    <string name="preguntameOtraVez">Pregúntame otra vez</string>
    <string name="requierePermisosUbi">El mapa requiere permisos de ubicación.</string>
    <string name="ajustes">Ajustes</string>
    <string name="registrarse">Registrarse</string>
    <string name="usuarioCreado">El usuario ha sido creado con éxito.</string>
    <string name="usuarioExiste">El nombre de usuario introducido ya está en uso.</string>
    <string name="usuarioError">Error al crear el usuario.</string>
    <string name="masCampos">Rellena todos los campos.</string>
    <string name="sinCuenta">¿No tienes cuenta?</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="loginError">Ha habido un error en el inicio de sesión.</string>
    <string name="perfil">Perfil</string>
    <string name="requierePermisosCam">Esta función requiere permisos de cámara.</string>
    <string name="kmsRedonda">kms a la redonda</string>
    <string name="juegaRedJack">¡Juega RedJack!</string>
    <string name="dealerTriste">El dealer te echa de menos.</string>
    <string name="barajaCaliente">La baraja está caliente...</string>
    <string name="victorias">Victorias</string>
    <string name="derrotas">Derrotas</string>
    <string name="empates">Empates</string>
    <string name="partidasJugadas">Manos jugadas</string>
    <string name="estatus">Estatus</string>
    <string name="monedas">Monedas</string>
    <string name="cargando">Cargando</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="jugar">Jugar</string>
    <string name="requierePermisosGal">Esta función requiere permisos de galería.</string>
</resources>