<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.Entrega1.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Entrega1.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/app_widget_inner_view_background"
        android:dividerPadding="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textWUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cargando" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textWVicts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/victorias" />

            <TextView
                android:id="@+id/iWVicts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cargando" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textWDerrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/derrotas" />

            <TextView
                android:id="@+id/iWDerrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cargando" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textWEmpts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empates" />

            <TextView
                android:id="@+id/iWEmpts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cargando" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textWSaldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monedas" />

            <TextView
                android:id="@+id/iWSaldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cargando" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonWJugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jugar" />
    </LinearLayout>
</RelativeLayout>